# sds-saodiseng

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  README_EN.md  gen_icons.py  package.json
.claude/commands/: add-scaffold.md  scaffold-review.md
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
apps/desktop/: index.html  package.json
apps/desktop/src/: App.tsx  advisorClient.ts  main.tsx  mocks.ts  styles.css  triage.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: AdvisorCard.tsx  ChatPanel.tsx  CleanupModal.tsx  ErrorBoundary.tsx  Logo.tsx  ScaffoldPanel.tsx  Settings.tsx  SteamWorkshopModal.tsx  Studio.tsx  TreeView.tsx  Treemap.tsx  TriageView.tsx
crates/advisor/: Cargo.toml
crates/advisor/src/: lib.rs
crates/executor/: Cargo.toml
crates/scaffold/: Cargo.toml
crates/scaffold-lint/: Cargo.toml
crates/scaffold-lint/src/: main.rs
crates/scaffold/tests/: conda_safety.rs  wechat_pc_safety.rs
crates/scaffold/tests/_templates/: scaffold_safety.rs
crates/scanner/: Cargo.toml
crates/scanner/src/: lib.rs
crates/steam-inspector/: Cargo.toml
crates/steam-inspector/tests/: inspect_real_dir.rs  parse_real_fixtures.rs
docs/: ARCHITECTURE.md  HOWTO.md  SCAFFOLD-AUTHORING.md  cross-device-test-checklist.md  steam-inspector.md  wechat_scaffolds_and_harness.md  wechat_todos.md  why-saodiseng.md
docs/research/: python-dev-cleanup-landscape.md
docs/scaffold-requirements/: STATUS.md
docs/screenshots/: README.md
scaffolds/_templates/: scaffold.toml
scripts/: make-icon.ps1
