[package]
name        = "saodiseng-scaffold-lint"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true

[[bin]]
name = "saodiseng-scaffold-lint"
path = "src/main.rs"

[dependencies]
saodiseng-scaffold = { path = "../scaffold" }
toml.workspace    = true
anyhow.workspace  = true
